feat(source): add tests & fix some bugs
